test/invalid-files/reverse_for_loop_2.in.pcse
// This should fail, since it "won't ever terminate".
FOR i <- 10.0 TO 0.0
	OUTPUT "unreachable"
NEXT
